diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/Affinities_PK__c.field-meta.xml
<CustomField>
    <fullName>Affinities_PK__c</fullName>
    <label>Affinities PK</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Affinities PK</labelOverride>
        <masterLabel>Affinities PK</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>