diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/affinity_type__c.field-meta.xml
<CustomField>
    <fullName>affinity_type__c</fullName>
    <label>affinity_type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>affinity_type</labelOverride>
        <masterLabel>affinity_type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>