diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Affinities</relationshipLabel>
    <relationshipName>Customer_Affinities</relationshipName>
    <type>Lookup</type>
</CustomField>