diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/customer_name__c.field-meta.xml
<CustomField>
    <fullName>customer_name__c</fullName>
    <label>customer_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>customer_name</labelOverride>
        <masterLabel>customer_name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>