diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/rel_1771007320098_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1771007320098_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer_Affinities_customer_id_map__rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Customer_Affinities_customer_id_map__rel</relationshipLabel>
    <relationshipName>rel_1771007320098_end</relationshipName>
    <type>Lookup</type>
</CustomField>