diy-datacloud/main/default/objects/Customer_Affinities__dlm/fields/score__c.field-meta.xml
<CustomField>
    <fullName>score__c</fullName>
    <label>score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>score</labelOverride>
        <masterLabel>score</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>